kelas kubernetes/01. kubernetes dasar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-nginx
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: aplikasi-nginx
  template:
    metadata:
      labels:
        app: aplikasi-nginx
    spec:
      containers:
      - name: aplikasi-nginx
        image: nginx:1.22.1
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: konfig-ssh
            mountPath: /var/secret/ssh
            readOnly: true
          - name: config-game
            mountPath: "/config"
            readOnly: true
      
      volumes:
      - name: konfig-ssh
        secret:
          secretName: config-ssh
      - name: config-game
        configMap:
          # Provide the name of the ConfigMap you want to mount.
          name: game-demo
          # An array of keys from the ConfigMap to create as files
          items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"

---
apiVersion: v1
kind: Service
metadata:
  name: service-ngix
spec:
  type: ClusterIP
  selector:
    app: aplikasi-nginx
  ports:
  - port: 8080
    targetPort: 80
    # nodePort: 30001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  rules:
  - host: pecel-lele.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-ngix
            port: 
              number: 8080
